update swagger definition, update time/date format to ISO 8601
